# multi-default-trait-impl

./: Cargo.toml  README.md
src/: lib.rs
