[package]
name = "multi-default-trait-impl"
version = "0.1.0"
authors = ["William Budington <bill@eff.org>"]
edition = "2018"
description = "Define multiple default implementations for a trait"
license = "LGPL-2.1-or-later"
repository = "https://github.com/hainish/multi-default-trait-impl"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
lazy_static = "1.3"
proc-macro2 = "1.0"
